--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "feather-icons": "^4.28.0",
     "ng2-mqtt": "^0.1.2",
     "ngx-mqtt": "^6.12.0",
     "paho-mqtt": "^1.1.0",
